# emopoint

./: .gitignore  LICENSE  README.md  go.mod  pyproject.toml
emopoint/: __init__.py  generated.py  lib.py
emopoint/tests/: test_lib.py
go/emopoint/: emopoint.go  emopoint_test.go  generated.go  go.mod
js/: jest.config.js  package-lock.json  package.json  tsconfig.json
js/src/: generated.ts  index.ts  lib.test.ts  lib.ts
lab/: cluster_eval.py  explore.py  index.py  models.py  politics.py  sketch.py  text_gen.py  train.py
scripts/: bump.sh  codegen.py
